# smtx

./: Cargo.toml  README.md  go.mod  go.sum  main.go  main_.goat  pyproject.toml
ast/: ast.go  builder.go  generator.go
benchmarks/: README.md  bench_test.go
compiler/: builder.go  compiler.go  error.go
config/: config.go
lib/: Cargo.toml
lib/src/: compiler.rs  lib.rs  parser.rs
logics/QF_LIA/: QF_LIA.go
parser/: Cargo.toml  README.md  bindings.h  parser.go  parser2.go  parser_flexbuffers.go  participle.go  particle.go  tree_sitter.go
parser/src/: lib.rs
src/: main.rs
std/: QF_UF.py  core_theory.py  prelude.py
tests/: _ast.go  ast.go  hello.go  sample.r.smt2  sample.smt2  sample.smt2.py  smt2_test.go  test-002.smt2
types/: types.go
utils/: error.go  utils.go
wip/: _main.ts  main.ts  package-lock.json  package.json  tsconfig.json
wip/prelude/: QF_BV.ts  QF_LIA.ts  core.gleam  core.ts
